# QtApp

./: .gitignore  CMakeLists.txt  QtApp.sln
QtApp/: QtApp.cpp  QtApp.h  QtApp.qrc  QtApp.vcxproj  QtApp.vcxproj.filters  SubWin.cpp  SubWin.h  Ui_TabPanel.cpp  Ui_TabPanel.h  Ui_TitleBar.cpp  Ui_TitleBar.h  main.cpp  style.qss  ui.h
